tests/interpreter/call-expression-callee-error.stderr
error: identifier 'f' is not defined
 --> $DIR/call-expression-callee-error.lox:1:1
  |
1 | f();
  | ^
